fix task BC-3447